# ai-chat-fastapi-antdx

./: .env  .gitignore  README.md  agent.py  config.py  main.py  models.py  pyproject.toml  run_app.py  tools.py
client/: package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
client/src/components/: Chat.module.css  Chat.tsx
client/src/config/: api.ts
client/src/hooks/: useChat.ts
client/src/services/: chatService.ts
client/src/types/: chat.ts
