[project]
name = "ai-chat-fastapi-antdx"
version = "0.1.0"
description = "FastAPI AI Chat Application with AntD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
dev = "main:dev"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
